--- a/PW Tugas 1/Profile/About.html
+++ b/PW Tugas 1/Profile/About.html
@@ -21,7 +21,7 @@
             <h1>About Me</h1>
             <p>Hi, saya adalah seorang siswa di SMK Negeri 2 Surakarta. Saat ini sedang belajar HTML karena gabut dan juga karena tugas.</p>
             <p>Saya ingin menguasai HTML, CSS, Javascript, PHP, Python, Java, Flutter.</p>
-            <video width="720" src="Mwehehe.mp4" controls autoplay><source src="Mwehehe.mp4" type="video/mp4" /></video>
+            <video width="720" src="Mwehehe.mp4" controls autoplay><source src="hehehe.mp4" type="video/mp4" /></video>
         </div>
 
         <footer>
