--- a/PW Tugas 1/Profile/index.html
+++ b/PW Tugas 1/Profile/index.html
@@ -18,7 +18,7 @@
         <!-- Profile -->
         <hr />
         <div class="profile" align="center">
-            <img src="Prof.jpeg" alt="My Profile" />
+            <img src="Pp.jpg" alt="My Profile" />
             <h1>Yodha Agasthya Novianto Putra</h1>
             <p>Siswa SMK Negeri 2 Surakarta</p>
         </div>
