--- a/PW Tugas 1/Profile/Contact.html
+++ b/PW Tugas 1/Profile/Contact.html
@@ -23,7 +23,8 @@
                 <label for="Email">Email</label><br />
                 <input type="text" /><br />
                 <label for="Pesan">Pesan</label><br />
-                <textarea name="" id="" cols="50" rows="8"></textarea>
+                <textarea name="" id="" cols="50" rows="8"></textarea><br />
+                <input type="submit" />
             </div>
         </div>
         <footer>
