--- a/PW Tugas 1/Profile/About.html
+++ b/PW Tugas 1/Profile/About.html
@@ -10,7 +10,7 @@
         <nav>
             <ul type="none">
                 <li><a href="index.html">Home</a> |</li>
-                <li><a href="CV.html">Download CV</a> |</li>
+                <li><a href="CV.pdf">Download CV</a> |</li>
                 <li><a href="Contact.html">Contact</a> |</li>
                 <li><a href="About.html">About Me</a> |</li>
             </ul>
