--- a/PW Tugas 1/Profile/Contact.html
+++ b/PW Tugas 1/Profile/Contact.html
@@ -21,7 +21,7 @@
             <h1>Contact</h1>
             <div class="contact">
                 <label for="Email">Email</label><br />
-                <input type="text" /><br />
+                <input type="email" /><br />
                 <label for="Pesan">Pesan</label><br />
                 <textarea name="" id="" cols="50" rows="8"></textarea><br />
                 <input type="submit" />
